--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,10 @@ repos:
     -   id: check-yaml
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
+-   repo: https://github.com/pre-commit/mirrors-pylint
+    rev: ''  # Use the sha / tag you want to point at
+    hooks:
+    -   id: pylint
 -   repo: https://github.com/pre-commit/mirrors-eslint
     rev: v7.17.0
     hooks:
