--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,5 +16,8 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.6
+      - name: Install dependencies
+        run: |
+          python -m pip install pytest --user 
       - name: Run tests with pytest
         run: pytest
