--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,4 +20,4 @@ jobs:
         run: |
           python -m pip install pytest --user 
       - name: Run tests with pytest
-        run: pytest
+        run: python -m pytest
