--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,12 @@ repos:
     hooks:
     -   id: eslint
         args: [--fix]
+-   repo: local
+    hooks:
+    -   id: run-tests
+        name: run tests
+        entry: python3 -m pytest 
+        language: python
+        additional_dependencies: [pre-commit, pytest]
+        always_run: true
+        pass_filenames: false
